feat: added dijkstra into recommendation system

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ ENV/
 # User specific files
 solutions/
 user_progress.json
+simulated_user_progress.json
 
 # API keys and sensitive information
 secrets.json
